# ml-playground

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python.yml
cmd/: dataloader_test.py  hymenoptera_transfer_learn.py  verify_pytorch.py
ml_playground/: repometa.py  types.py
ml_playground/dataset/: hymenoptera_image_dataset.py  random_fake_dataset.py
ml_playground/models/: mstcn.py
ml_playground/proj/cifar10/: config.py  do_train.py
ml_playground/proj/cifar10/configs/: default.yaml
ml_playground/proj/hymenoptera/: config.py  data.py  do_train.py
ml_playground/proj/hymenoptera/configs/: default.yaml
ml_playground/proj/ymc-bfa-imu/: preproc.py
ml_playground/proj/ymc_bfa_imu/: config.py  data.py  models.py  predict.py  preproc.py  train_mstcn_binary_classifier.py
ml_playground/proj/ymc_bfa_imu/configs/: default.yaml
ml_playground/util/: algo.py  logging.py  pl_callback.py  random.py  sysinfo.py
toy/: dataloader_test.py  hymenoptera_transfer_learn.py  verify_pytorch.py  wandb_fake_train.py
