[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
  { include = "ml_playground" },
]


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = [
  {platform = "linux", version = "^2.0.1+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^2.0.1", source = "pypi"},
]
torchvision = [
  {platform = "linux", version = "^0.16.0+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^0.16.0", source = "pypi"},
]
tqdm = "^4.66.1"
pydantic = "^2.4.2"
fire = "^0.5.0"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
ruff = "^0.0.290"
pyink = "^23.5.0"
isort = "^5.12.0"
pyright = "^1.1.331"
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
