[tool.poetry]
name = "ml-playground"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
  { include = "ml_playground" },
]


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = [
  {platform = "linux", version = "^2.0.1+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^2.0.1", source = "pypi"},
]
torchvision = [
  {platform = "linux", version = "^0.16.0+cu121", source = "torch_cu121"},
  {platform = "darwin", version = "^0.16.0", source = "pypi"},
]
tqdm = "^4.66.1"
pydantic = "^2.4.2"
fire = "^0.5.0"
numpy = "^1.26.1"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
ruff = "^0.0.290"
pyink = "^23.5.0"
black = "~23.9.1"  # NOTE: pyink=23.5.0 does NOT supports black>=23.10.*
isort = "^5.12.0"
pyright = "^1.1.331"
matplotlib = "^3.8.0"

[tool.poetry.group.dev-optional]
optional = true
[tool.poetry.group.dev-optional.dependencies]
jupyterlab = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#------------------ CI tool settings --------------------
[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "tmp",
  "data",
]
[tool.isort]
profile = "black"
extend_skip = [
  "tmp", "data",
]

[tool.ruff]
extend-exclude = [
  "tmp", "data",
]
# see: https://docs.astral.sh/ruff/rules/
select = [
  "E",  # pycodestyle (Errors)
  "W",  # pycodestyle (Warnings)
  "F",  # pyflakes
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # bugbear
  "ANN", # flake8-annotations
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "SIM", # flake8-simplify
]
ignore = [
  "ANN101", # missing-type-self
]
